add basic header and global styles

--- a/Sass/_variables.scss
+++ b/Sass/_variables.scss
@@ -1,9 +1,13 @@
 // Colors
+$darkBlue: #2d314d;
 $isabell: #f6f0ed;
 $robinEggBlue: #00cecb;
 $eggShell: #f4f1de;
 $jet: #353535;
+$paleSilver: #c1bcac;
 $grayishBlue: #9698a6;
+$limeGreen: hsl(136, 65%, 51%);
+$white: #ffffff;
 
 // Font Sizes
 $font-sm: 0.875rem; // 14px
