--- a/Sass/_header.scss
+++ b/Sass/_header.scss
@@ -116,11 +116,17 @@
     display: flex;
     // flex-wrap: wrap;
 
+    marquee {
+      padding-top: 0.6rem;
+    }
     @include breakpoint-up(medium) {
       padding: 0.8rem 1.875rem 0 3.75rem;
       height: 3.75rem;
       font-size: 1rem;
       font-weight: 600;
+      marquee {
+        padding-top: 1rem;
+      }
     }
 
     #btext {
@@ -128,46 +134,24 @@
       width: 100px;
       margin: 0;
       padding: 9px 10px 11px 14px;
-      border-radius: 0.4rem;
       color: #e30a0a;
       text-align: center;
       background-color: #ddd;
       z-index: -1;
-      -webkit-clip-path: polygon(
-        100% 0%,
-        100% 54%,
-        100% 100%,
-        25% 100%,
-        0% 50%,
-        25% 0%
-      );
-      clip-path: polygon(
-        100% 0%,
-        100% 54%,
-        100% 100%,
-        25% 100%,
-        0% 50%,
-        25% 0%
-      );
+      clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 35% 100%);
 
       @include breakpoint-up(medium) {
-        height: 2.25rem;
-        width: 6.5rem;
+        height: 2.5rem;
+        width: 10rem;
         margin: 0;
-        padding: 0.75rem 0 0.875rem 0;
-        border-radius: 0.4rem;
+        padding-top: 0.8rem;
+        padding-left: 1rem;
+        padding-right: 0rem;
         color: #e30a0a;
         text-align: center;
         background-color: #ddd;
         z-index: -1;
-        clip-path: polygon(
-          100% 0%,
-          100% 54%,
-          100% 100%,
-          25% 100%,
-          0% 50%,
-          25% 0%
-        );
+        clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 35% 100%);
       }
     }
 
