change some  measurements from pixels to rem

--- a/Sass/_globals.scss
+++ b/Sass/_globals.scss
@@ -148,7 +148,7 @@ button,
   padding: 0.875rem 2.1875rem;
   background: linear-gradient(to right, $limeGreen, $robinEggBlue);
   border: 0;
-  border-radius: 50px;
+  border-radius: 3.125rem;
   cursor: pointer;
   color: white;
   font-weight: 400;
