--- a/Sass/_header.scss
+++ b/Sass/_header.scss
@@ -130,10 +130,10 @@
     }
 
     #btext {
-      height: 27px;
-      width: 100px;
+      height: 1.6875rem;
+      width: 6.25rem;
       margin: 0;
-      padding: 9px 10px 11px 14px;
+      padding: 0.5625rem 0.625rem 0.6875rem 0.875rem;
       color: #e30a0a;
       text-align: center;
       background-color: #ddd;
