--- a/Sass/_hero.scss
+++ b/Sass/_hero.scss
@@ -1,11 +1,11 @@
 .popular-news{
     display: flex;
     flex-wrap: wrap;
-    margin: 30px 5%;
+    margin: 1.875rem 5%;
 
     h2{
     margin: 0;
-    padding: 15px 5px 0px;
+    padding: 0.9375rem 0.3125rem 0rem;
     color: #fff;
     }
 
@@ -42,7 +42,7 @@
 
     .thumbnail-headings {
         text-align: right;
-        padding-top: 15px;
+        padding-top: 0.9375rem;
       }
 
     .carousel,
@@ -55,26 +55,26 @@
   .carousel-text {
     position: absolute;
     word-wrap: normal;
-    bottom: 5px;
+    bottom: 0.3125rem;
     z-index: 2;
     color: #fff;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: bolder;
-    padding: 0 10px;
+    padding: 0 0.625rem;
     transition-duration: 500ms;
   }
   .carousel-text {
-    font-size: 18px;
+    font-size: $font-med;
   }
 
   .news-container{
-    font-size: 18px;
+    font-size: $font-med;
     &:hover{
         img {
             filter: brightness(0.4);
           }
         .carousel-text {
-            bottom: 10px;
+            bottom: 0.625rem;
           }
       }
   }
@@ -83,14 +83,14 @@
   .carousel-date {
     display: block;
     text-align: center;
-    font-size: 14px;
+    font-size: $font-sm;
     color: rgba(255, 255, 255, 0.7);
     font-weight: 300;
   }
 
   @include breakpoint-down(medium){
     .breaking-news-section {
-        padding: 10px;
+        padding: 0.625rem;
         flex-wrap: wrap;
       }
       .featured {
