--- a/Sass/_globals.scss
+++ b/Sass/_globals.scss
@@ -19,6 +19,7 @@ body {
   color: $grayishBlue;
   line-height: 1.3;
   min-height: 300vh;
+  background-color: #eee;
 
   @include breakpoint-up(large) {
     font-size: $font-med;
