--- a/Sass/_hero.scss
+++ b/Sass/_hero.scss
@@ -115,8 +115,17 @@
   }
 
   @include breakpoint-down(small){
-    .carousel-text{
+    .carousel-caption h5 {
         display: none;
+    }
+
+    #latest{
+      flex: auto;
+
+    }
+
+    #our-picks{
+      flex: auto;
     }
   }
 
