correct the news articles img element proportions

--- a/Sass/_article.scss
+++ b/Sass/_article.scss
@@ -1,4 +1,4 @@
- .main-content{
+ .main-content {
      .block-title{
          border-bottom: 0.125rem solid $articleRed;
          color: $white;
@@ -20,6 +20,10 @@
             font-weight: 700;
         }
 
+        img{
+            min-width: 100%;
+        }
+
         .meta-info{
             .post-date{
                 font-size: $font-sm;
@@ -33,5 +37,13 @@
             font-size: 1rem;
             margin-top: 0.9275rem;
         }
+     }
+
+     @include breakpoint-down(small){
+         .post-block{
+             p{
+                 margin-top: 0.625rem;
+             }
+         }
      }
  }
