add sidebar news cards

--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -6,6 +6,6 @@
 @import "header";
 @import "hero";
 @import "article";
-@import "authors";
 @import "sidebar";
 @import "opinions";
+@import "cards";
