--- a/Sass/_sidebar.scss
+++ b/Sass/_sidebar.scss
@@ -67,6 +67,52 @@
         
     }
 
+    /* ad styles */
+    .widget{
+        .widget-content{
+            .sidebar-ad{
+                img{
+                    display: block;
+                    margin: 0 auto;
+                }
+            }
+        }
+    }
+    
+
+    /* Tags styles */
+    .widget{
+        .widget-content{
+            .sidebar-tags{
+                
+                ul {
+                    list-style: none;
+                    padding-right: 0rem;
+                    line-height: 2.5rem;
+                    margin-bottom: 0;
+        
+                    li {
+                        display: inline;
+                        background-color: #c1c4c7e5;
+                        border: 1px solid #dfe0e0;
+                        color:#333;
+                        font-size: 0.75rem;
+                        padding: 0.375rem 0.3rem;
+                    }
+
+                    li:hover{
+                        background-color: #f2552c;
+                        color: #fff;
+                        cursor: pointer;
+                        transition: 0.2s;
+                    }
+
+                }
+            }
+        }
+    }
+    
+
     @include breakpoint-up(medium){
         .latest-news{
             .news-item-container{
