--- a/Sass/_cards.scss
+++ b/Sass/_cards.scss
@@ -3,12 +3,13 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 0.5rem;
+    margin: 0.9375rem 0;
 
     .card{
         display: flex;
         flex-direction: column;
-        flex: 1 0 300px;
-        max-width: 450px;
+        flex: 1 0 18.75rem;
+        max-width: 28.125rem;
         overflow: hidden;
         background: #fff;
         color: #000;
@@ -23,7 +24,7 @@
         }
 
         &__image{
-            flex: 0 0 120px;
+            flex: 0 0 7.5rem;
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
