--- a/Sass/_hero.scss
+++ b/Sass/_hero.scss
@@ -20,6 +20,49 @@
     }
 
     .featured{
+
+      .popular-news-carousel{
+        .carouselHero{
+          .carousel{
+            .carousel-indicators{
+              margin-bottom: 0;
+            }
+            .carousel-inner{
+              .carousel-item{
+                .carousel-caption{
+                  position: absolute;
+                  padding-top: 1rem;
+                  padding-bottom: 1rem;
+                  padding-right: 30px;
+                  right: 0;
+                  bottom: 0;
+                  left: 0;
+                  width: 100%;
+                  text-align: right;
+                  background-color:whitesmoke;
+                  color: #000;
+
+                  p{
+                    line-height: 1;
+                    margin-bottom: 0.25rem;
+                  }
+                }
+
+                .carousel-caption::before{
+                  content: "";
+                  position: absolute;
+                  top: 0;
+                  right: 0;
+                  height: 80px;
+                  width: 5px;
+                  margin-right: 16px;
+                  background-color: #4ba7f1;
+                }
+              }
+            }
+          }
+        }
+      }
         flex: 2;
         h2{
             background-color: black;
@@ -94,6 +137,15 @@
   }
 
   @include breakpoint-down(medium){
+    .carousel-caption {
+      padding-top: 0.25rem;
+      padding-bottom: 0.25rem;
+      p{
+        margin-top: 0;
+        margin-bottom: 0;
+
+      }
+    }
     .breaking-news-section {
         padding: 0.625rem;
         flex-wrap: wrap;
@@ -115,8 +167,21 @@
   }
 
   @include breakpoint-down(small){
-    .carousel-caption h5 {
+    .carousel-caption::before{
+     display: none;
+    }
+    .carousel-caption {
+      padding-top: 0.25rem;
+      padding-bottom: 0.25rem;
+      p{
+        margin-top: 0;
+        margin-bottom: 0;
+
+      }
+
+      h5{
         display: none;
+      }
     }
 
     #latest{
