--- a/Sass/_variables.scss
+++ b/Sass/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
+$mainColor: #6aa5f1;
 $logoRed: #e30a0a;
-$articleRed: #f2552c;
+$titleColor: #f2552c;
 $darkBlue: #2d314d;
 $isabell: #f6f0ed;
 $robinEggBlue: #00cecb;
