--- a/Sass/_hero.scss
+++ b/Sass/_hero.scss
@@ -56,7 +56,7 @@
                   height: 80px;
                   width: 5px;
                   margin-right: 16px;
-                  background-color: #4ba7f1;
+                  background-color: $mainColor;
                 }
               }
             }
