--- a/Sass/_opinions.scss
+++ b/Sass/_opinions.scss
@@ -11,23 +11,21 @@
                 border-radius: 5%;
 
                 .heading{
-                    position: relative;
+                    // position: relative;
                     background-color: #ece4db;
                     border-radius: 5%;
                 }
 
                 h2{
-                    position: absolute;
-                    top: 30px;
-                    left: 30px;
+                    // position: absolute;
+                    // top: 30px;
+                    // left: 30px;
+                    margin-bottom: 0.3125rem;
+                    padding-top: 0.3125rem;
                 }
-                h2, h4{
-                    margin: 0;
-                    padding: 0;
-                }
-
                 h4{
-                    margin-top: 6px;
+                    margin: 0.375rem 0;
+                    padding: 0.375rem;
                 }
 
                 img{
@@ -51,7 +49,7 @@
 
                 a{
                     display: inline-block;
-                    background: rgb(6, 81, 150);
+                    background: $mainColor;
                     color: $white;
                     text-decoration: none;
                     padding: 0.7rem 1.25rem 0.5rem;
