--- a/Sass/_globals.scss
+++ b/Sass/_globals.scss
@@ -12,7 +12,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: Katibeh, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+  font-family: 'El Messiri', Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
   font-weight: 300;
   font-size: $font-med;
