--- a/Sass/_pages.scss
+++ b/Sass/_pages.scss
@@ -1,4 +1,35 @@
-body{
-    background: color #4e4e4e;
+.page{
+    display: flex;
+    background-color: #4e4e4e;
+    &__banner{
+        background-color: aqua;
+    }
     
+    &__main-section{
+        display: flex;
+        flex-direction: column;
+        max-width: 100%;
+        overflow: hidden;
+    }
+    &__title{
+        font-size: 1.5rem;
+        color: $mainColor;
+    }
+
+
+    &__image{
+        width: 100%;
+        height: 500px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+
+    &__content{
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        padding: 1rem;
+        
+    }
 }
