--- a/Sass/_pages.scss
+++ b/Sass/_pages.scss
@@ -24,7 +24,7 @@
 
     &__image{
         width: 100%;
-        height: 500px;
+        flex: 0 0 16rem;
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
@@ -37,6 +37,12 @@
         height: 100%;
         padding: 1rem;
         
+    }
+
+    @include breakpoint-up(medium){
+        &__image{
+            flex: 0 0 28.75rem;
+        }
     }
 
     @include breakpoint-down(medium){
