add posts markup

--- a/Sass/_pages.scss
+++ b/Sass/_pages.scss
@@ -2,8 +2,21 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    margin-left: 70px;
     &__banner{
         background-color: aqua;
+    }
+
+    &__container {
+        padding-left: 5px;
+        padding-right: 5px;
+        margin-left: 50px;
+        margin-right: 50px;
+        max-width: 1280px;
+    }
+
+    .card{
+        flex: 1 0 14rem;
     }
     
     &__main-section{
@@ -46,21 +59,47 @@
     }
 
     @include breakpoint-down(medium){
-            .container{
-                justify-content: center;
-                .col-8 {
-                    width: 100%;
-                }
 
-                .col-4 {
-                    width: 100%;
-                }
-                    .row{
-                    display: flex;
-                    flex-wrap: wrap;
-                    flex-direction: column;
-
-                    }
+        margin-left: 60px;
+        margin-right: -30px;
+        .container{
+            justify-content: center;
+            .col-8 {
+                width: 100%;
             }
+
+            .col-4 {
+                width: 100%;
+            }
+            
+            .row{
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+
+            }
+        }
+
+        .container{
+            justify-content: center;
+            .col-7 {
+                width: 100%;
+            }
+
+            .col-3 {
+                width: 100%;
+            }
+
+            .col-2 {
+                display: none;
+            }
+            
+            .row{
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+
+            }
+        }
     }
 }
